почти реализовал все хендлеры, поднял докер контейнер с user_service и бд, начал выносить всё в отдельные пакеты для чистоты кода, готовлюсь реализовывать api_gateway
