# user_service/handlers/auth.go
@@ -1,16 +1,13 @@
 package handlers
 
 import (
-	"context"
-	"encoding/json"
 	"errors"
 	"log"
 	"net/http"
 	"time"
 	"user_service/models"
+	"user_service/queries"
 
-	"github.com/google/uuid"
-	"github.com/jackc/pgx/v5"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"golang.org/x/crypto/bcrypt"
 )
@@ -18,41 +15,28 @@ import (
 // RegisterUser обрабатывает регистрацию пользователя.
 func RegisterUser(db *pgxpool.Pool) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req models.RegisterRequest
-
-		body, err := readRequestBody(r)
+		req, err := ParseRequestBody[models.RegistrationData](w, r)
 		if err != nil {
-			http.Error(w, "Ошибка чтения запроса", http.StatusInternalServerError)
-			log.Printf("RegisterUser\t Ошибка чтения запроса: %v", err)
 			return
 		}
-
-		if err := json.Unmarshal(body, &req); err != nil {
-			http.Error(w, "Неверный формат JSON", http.StatusBadRequest)
-			return
-		}
-
 		// Проверяем, существует ли уже пользователь с таким логином
-		var existingUserID string
-		if err := db.QueryRow(context.Background(),
-			"SELECT user_id FROM user_info WHERE login = $1",
-			req.Login).Scan(&existingUserID); err != nil && !errors.Is(err, pgx.ErrNoRows) {
+		ok, err := queries.IsLoginExists(db, req.Login)
+		if err != nil {
 			http.Error(w, "Ошибка чтения базы данных", http.StatusInternalServerError)
 			log.Printf("RegisterUser\t Ошибка проверки существования login в бд: %v", err)
 			return
-		} else if err == nil {
+		} else if ok {
 			http.Error(w, "Логин уже существует", http.StatusConflict)
 			return
 		}
 
 		// Проверяем, существует ли уже пользователь с таким email
-		if err := db.QueryRow(context.Background(),
-			"SELECT user_id FROM user_info WHERE email = $1",
-			req.Email).Scan(&existingUserID); err != nil && !errors.Is(err, pgx.ErrNoRows) {
+		ok, err = queries.IsEmailExists(db, req.Email)
+		if err != nil {
 			http.Error(w, "Ошибка чтения базы данных", http.StatusInternalServerError)
 			log.Printf("RegisterUser\t Ошибка проверки существования email в бд: %v", err)
 			return
-		} else if err == nil {
+		} else if ok {
 			http.Error(w, "Email уже существует", http.StatusConflict)
 			return
 		}
@@ -64,17 +48,10 @@ func RegisterUser(db *pgxpool.Pool) http.HandlerFunc {
 			return
 		}
 
-		query := `
-			INSERT INTO user_info (user_id, login, password_hash, email, registered_at, changed_at, last_login_time) 
-			VALUES ($1, $2, $3, $4, $5, $5, $5)`
-
-		newUserID := uuid.New().String() // Генерация нового UUID
-		log.Printf("RegisterUser\t Создание нового пользователя %s", newUserID)
-
-		_, err = db.Exec(context.Background(), query, newUserID, req.Login, string(hashedPassword), req.Email, time.Now())
+		err = queries.RegisterUser(db, req, string(hashedPassword))
 		if err != nil {
 			http.Error(w, "Ошибка сохранения пользователя", http.StatusInternalServerError)
-			log.Printf("RegisterUser\t Ошибка добавления пользователя в бд: %v", err)
+			log.Printf("RegisterUser\t Ошибка добавления пользователя: %v", err)
 			return
 		}
 
@@ -85,43 +62,25 @@ func RegisterUser(db *pgxpool.Pool) http.HandlerFunc {
 // LoginUser обрабатывает вход пользователя.
 func LoginUser(db *pgxpool.Pool) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req models.LoginRequest
-
-		body, err := readRequestBody(r)
+		req, err := ParseRequestBody[models.AuthData](w, r)
 		if err != nil {
-			http.Error(w, "Ошибка чтения запроса", http.StatusInternalServerError)
-			log.Printf("LoginUser\t Ошибка чтения запроса: %v", err)
 			return
 		}
 
-		if err := json.Unmarshal(body, &req); err != nil {
-			http.Error(w, "Неверный формат JSON", http.StatusBadRequest)
+		err = AuthenticateUser(db, *req)
+		if errors.Is(err, DataBaseError) {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		} else if err != nil {
+			http.Error(w, err.Error(), http.StatusUnauthorized)
 			return
 		}
 
-		var storedHash string
-		query := `SELECT password_hash FROM user_info WHERE login=$1`
-		err = db.QueryRow(context.Background(), query, req.Login).Scan(&storedHash)
-		if err != nil && !errors.Is(err, pgx.ErrNoRows) {
-			http.Error(w, "Ошибка чтения базы данных", http.StatusInternalServerError)
-			log.Printf("LoginUser\t Ошибка аутентификации: %v", err)
-			return
-		} else if errors.Is(err, pgx.ErrNoRows) {
-			http.Error(w, "Неверный логин или пароль", http.StatusUnauthorized)
-			return
-		}
-
-		if err := bcrypt.CompareHashAndPassword([]byte(storedHash), []byte(req.Password)); err != nil {
-			http.Error(w, "Неверный логин или пароль", http.StatusUnauthorized)
-			return
-		}
-
-		_, err = db.Exec(context.Background(), `UPDATE user_info SET last_login_time=$1 WHERE login=$2`, time.Now(), req.Login)
+		err = queries.UpdateLastLoginTime(db, req.Login, time.Now())
 		if err != nil {
 			log.Printf("Ошибка обновления last_login_time: %v", err)
 		}
 
-		//TODO нужно вернуть JWN токен
-		w.WriteHeader(http.StatusOK) // Возвращаем только статус 200
+		w.WriteHeader(http.StatusOK)
 	}
 }
